workaround to enumeration bug where script config is counted as conn.  need to fix this properly though.

--- a/nccm/nccm.yml
+++ b/nccm/nccm.yml
@@ -21,8 +21,8 @@
 
 # nccm internal configs:
 
-nccm_config_controlmode:
-  config: std               # Supported values: std, focus
+#nccm_config_controlmode:
+#  config: std               # Supported values: std, focus
 
 
 # connections configs:
