nccm.yml config values now stored directly in keys/values rather than a sub dict. THIS IS A BREAKING CHANGE - nccm script requires the new nccm.yml format.
Added support for log level in nccm.yml config file.

--- a/nccm/nccm.yml
+++ b/nccm/nccm.yml
@@ -28,8 +28,8 @@
 
 # nccm internal configs:
 
-nccm_config_controlmode:
-  config: std               # Supported values: std, focus
+nccm_config_controlmode:  std     # Supported values: std, focus
+nccm_config_loglevel:     warning # Supported values: debug, info, warning, error, critical
 
 
 # connections configs:
