--- a/nccm/nccm.yml
+++ b/nccm/nccm.yml
@@ -126,6 +126,81 @@ nccm_loop_nccm: false
 #   the new window size will apply when nccm menu reappears after you exit
 #   from your ssh session.
 
+nccm_keybindings:
+  # ^ nccm is configured for US keyboard mapping. If you have something else
+  #   and certain keys don't behave as you'd expect - change their codes here.
+  #   Each of the keyboard codes is a list, you can map a keypress to as many
+  #   codes as you wish.
+  #   If you want to figure out what code results from a keypress - run
+  #   'nccm -d' , press a key and look for 'Keyboard entry: UserKey = nnn'
+  #   in your logs.
+  #   You can even map other keys to nccm keys - for example instead of F1 you
+  #   want to use F12 - just put the code for F12 in the F1 key position.
+  #   Individual key bindings follow:
+  nccm_key_tab:         # Tab key
+    - 9
+  nccm_key_space:       # Space bar
+    - 32
+  nccm_key_enter:       # Enter key
+    - 10
+    - 13
+  nccm_key_backspace:   # Backspace key to delete one char backwards
+    - 263
+  nccm_key_ctrl_c:      # Ctrl-c (break - also quits nccm)
+    - 3
+  nccm_key_ctrl_d:      # Ctrl-d (exit - also quits nccm)
+    - 4
+  nccm_key_ctrl_h:      # Ctrl-h (for displaying help)
+    - 8
+  nccm_key_ctrl_k:      # Ctrl-k (toggle cursor mode)
+    - 11
+  nccm_key_ctrl_q:      # Ctrl-q (quits nccm)
+    - 17
+  nccm_key_exc:         # ! key
+    - 33
+  nccm_key_at:          # @ key
+    - 64
+  nccm_key_hash:        # # key
+    - 35
+  nccm_key_dollar:      # $ key
+    - 36
+  nccm_key_percent:     # % key
+    - 37
+  nccm_key_shift_up:    # Shift up arrow
+    - 337
+  nccm_key_shift_down:  # Shift down arrow
+    - 336
+  nccm_key_shift_left:  # Shift left arrow
+    - 393
+  nccm_key_shift_right: # Shift right arrow
+    - 402
+  nccm_key_up:          # Up arrow
+    - 259
+  nccm_key_down:        # Down arrow
+    - 258
+  nccm_key_left:        # Left arrow
+    - 260
+  nccm_key_right:       # Right arrow
+    - 261
+  nccm_key_pgup:        # Pgup key
+    - 339
+  nccm_key_pgdn:        # Pgdn key
+    - 338
+  nccm_key_home:        # Home key
+    - 262
+  nccm_key_end:         # End key
+    - 360
+  nccm_key_f1:          # F1 key
+    - 265
+  nccm_key_f2:          # F2 key
+    - 266
+  nccm_key_f3:          # F3 key
+    - 267
+  nccm_key_f4:          # F4 key
+    - 268
+  nccm_key_f5:          # F5 key
+    - 269
+
 
 # connections configs:
 
