Added Ctrl-u to clear active textbox. Fixed hardcoded backspace key in keypress processor (function: ProcessKey   ). Docs updated.
nccm.yml now needs the key codes for ctrl-u  - added.

--- a/nccm/nccm.yml
+++ b/nccm/nccm.yml
@@ -170,6 +170,8 @@ nccm_keybindings:
     - 11
   nccm_key_ctrl_q:          # Ctrl-q (quits nccm)
     - 17
+  nccm_key_ctrl_u:          # Ctrl-u (clears textbox text)
+    - 21
   nccm_key_exc:             # ! key
     - 33
   nccm_key_at:              # @ key
